--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@goodcity/release-notes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Release note generator",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/patrixr/release-notes#readme",
   "dependencies": {
+    "debug": "^4.1.1",
     "jira-client": "^6.17.0",
     "lodash": "^4.17.15"
   }
