--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@goodcity/release-notes",
-  "version": "1.2.5",
+  "version": "1.2.6 ",
   "description": "Release note generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "release-notes": "./index.js"
+    "release-notes": "./bin/release-notes.js"
   },
   "repository": {
     "type": "git",
