--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@goodcity/release-notes",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "Release note generator",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "lodash": "^4.17.15",
     "markdown-pdf": "^10.0.0",
     "markdown-to-html": "0.0.13",
+    "request": "^2.88.2",
     "showdown": "^1.9.1"
   }
 }
